# openapi-llm

./: .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: open_pr.yml  pypi_release.yml  tests.yml
examples/petstore3/: invoke.py
openapi_llm/: utils.py
openapi_llm/client/: __init__.py  config.py  openapi.py  openapi_async.py
openapi_llm/core/: auth.py  provider.py  schema_conversion.py  spec.py
openapi_llm/providers/: anthropic.py  cohere.py  openai.py
test/: conftest.py  test_config.py  test_openapi_client.py  test_openapi_client_async.py  test_openapi_client_auth.py  test_openapi_client_complex_request_body.py  test_openapi_client_complex_request_body_mixed.py  test_openapi_client_edge_cases.py  test_openapi_client_error_handling.py  test_openapi_client_live.py  test_openapi_client_live_anthropic.py  test_openapi_client_live_cohere.py  test_openapi_client_live_openai.py  test_openapi_client_live_openai_async.py  test_openapi_cohere_conversion.py  test_openapi_openai_conversion.py  test_openapi_spec.py  test_util.py
test/test_files/yaml/: parameterless.yml
tests/: test_clients.py
